--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -24,14 +24,14 @@ under the License.
 // BACKGROUND COLORS
 ////////////////////
 $nav-bg: #7DAB1B !default;
-$examples-bg: #2E3336 !default;
+$examples-bg: #597A13 !default;
 $code-bg: #1E2224 !default;
-$code-annotation-bg: #191D1F !default;
+$code-annotation-bg: #574F39 !default;
 $nav-subitem-bg: #597A13 !default;
 $nav-active-bg: #574F39 !default;
 $nav-active-parent-bg: #574F39 !default; // parent links of the current section
 $lang-select-border: #000 !default;
-$lang-select-bg: #1E2224 !default;
+$lang-select-bg: #7DAB1B !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
 $main-bg: #F3F7F9 !default;
@@ -56,7 +56,7 @@ $lang-select-pressed-text: #fff !default; // color of language tab text when mou
 ////////////////////
 $nav-width: 230px !default; // width of the navbar
 $examples-width: 50% !default; // portion of the screen taken up by code examples
-$logo-margin: 0px !default; // margin below logo
+$logo-margin: 20px auto !default; // margin below logo
 $main-padding: 28px !default; // padding to left and right of content & examples
 $nav-padding: 15px !default; // padding to left and right of navbar
 $nav-v-padding: 10px !default; // padding used vertically around search boxes and results
